tests/fixtures/typeck/return_statement_mismatch.veyl
fn answer() -> Int {
    return true;
}
